Fixed some navbar spacing stuff, and some styles along with this.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ body {
 
 .tag-badge {
     font-size: 1.4em;
-    margin-bottom: 7px;
+    margin-top: 4px;
     margin-right: 7px;
 }
 
